# tarkov-changes-api-docs

./: .dockerignore  bumper.js  gen_docs.py  package.json
.github/workflows/: build_dev.yml  build_prod.yml  release.yml
config/: nginx.conf  supervisord.conf
docker/: Dockerfile
scripts/: gen_docs.py  pyproject.toml
source/: index.html.md
source/stylesheets/: _icon-font.scss  _variables.scss  screen.css.scss
