[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["inspxctelement <admin@inspectelement.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
genson = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
